# FlightRecordParsingLib

./: Dockerfile  LICENSE.txt  README.md  README_cn.md  ReleaseNote.md  ReleaseNote_cn.md
dji-flightrecord-kit/protoc/: buildProtoc.py
dji-flightrecord-kit/source/FRSample/: CMakeLists.txt  main.cc
dji-flightrecord-kit/source/FlightRecordStandardization/: CMakeLists.txt
dji-flightrecord-kit/source/FlightRecordStandardization/creater/: fr_standardization_creater.cpp
dji-flightrecord-kit/source/FlightRecordStandardization/include/creater/: fr_standardization_creater.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/include/errorCode/: fr_standardization_error_code.h
dji-flightrecord-kit/source/FlightRecordStandardization/include/parser/: fr_standardization_parser.h
dji-flightrecord-kit/source/FlightRecordStandardization/include/utils/: fr_standardization_utils.h
dji-flightrecord-kit/source/FlightRecordStandardization/model/GOBusiness/: fr_standardization_go_business_model.cpp  fr_standardization_go_business_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/airlink/: fr_standardization_airlink_model.cpp  fr_standardization_airlink_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/battery/: fr_standardization_battery_state.cpp  fr_standardization_battery_state.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/camera/: fr_standardization_camera_state.cpp  fr_standardization_camera_state.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/common/: fr_standardization_common.cpp  fr_standardization_common.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/flightcontroller/: fr_standardization_flightcontroller_model.cpp  fr_standardization_flightcontroller_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/frametime/: fr_standardization_frametime_model.cpp  fr_standardization_frametime_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/gimbal/: fr_standardization_gimbal_model.cpp  fr_standardization_gimbal_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/image/: fr_standardization_image_model.cpp  fr_standardization_image_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/mobileRC/: fr_standardization_mobile_rc_model.cpp  fr_standardization_mobile_rc_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/mobiledevice/: fr_standardization_mobile_device_state_model.cpp  fr_standardization_mobile_device_state_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/phantom3protocol/: ZucGZjOtwWrgqCCe.h
dji-flightrecord-kit/source/FlightRecordStandardization/model/rc/: fr_standardization_rc_model.cpp  fr_standardization_rc_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/summary/: fr_standardization_summary_model.cpp  fr_standardization_summary_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/vision/: fr_standardization_vision_model.cpp  fr_standardization_vision_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/: fr_standardization_filler_set.h
dji-flightrecord-kit/source/FlightRecordStandardization/parser/imp/: fr_standardization_parser_Imp.cpp  fr_standardization_parser_Imp.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/server_include/creater/: fr_standardization_server_creater.h
dji-flightrecord-kit/source/FlightRecordStandardization/server_include/parser/: fr_server_standardization_parser.h
dji-flightrecord-kit/source/FlightRecordStandardization/utils/: fr_standardization_utils.cpp  fr_standardization_utils_private.h
dji-flightrecord-kit/source/FlightRecordStandardization/utils/networking/: CLCoreLayer.h  CLHttpRequest.cpp  CLHttpRequest.h
dji-flightrecord-kit/source/FlightRecordStandardizationCpp/: CMakeLists.txt
dji-flightrecord-kit/source/FlightRecordStandardizationCpp/parser/: DJIFRProtoParser.cpp  DJIFRProtoParser.hpp
dji-flightrecordengine/source/: CMakeLists.txt  FlightRecordProtocolEnum.h  winunistd.h
dji-flightrecordengine/source/Parser/: FlightRecordParserDataTypePublic.h  FlightRecordParserEngine.cpp  FlightRecordParserEngine.h
dji-flightrecordengine/source/Parser/decoder/: flight_record_version_decoder.cpp  flight_record_version_decoder.h  flight_record_version_decoder_set.h
dji-flightrecordengine/source/Parser/decryption/: flight_record_decryption_layer.cpp  flight_record_decryption_layer.hpp  flight_record_decryption_layer_set.h
dji-flightrecordengine/source/Parser/protocol/: FlightRecordParserProtocol.cpp  FlightRecordParserProtocol.h
dji-flightrecordengine/source/Utils/Cache/: FlightRecordFileCacheUtils.cpp  FlightRecordFileCacheUtils.h
dji-flightrecordengine/source/Utils/File/: FlightRecordFileHandleUtils.cpp  FlightRecordFileHandleUtils.h
dji-flightrecordengine/source/Utils/buffer/: flight_record_buffer.cpp  flight_record_buffer.h
dji-flightrecordengine/source/Utils/common/: FlightRecordSemaphore.h
dji-flightrecordengine/source/Utils/encryption/: FlightRecordCRC64.cpp  FlightRecordCRC64.h  FlightRecordEncryptUtils.cpp  FlightRecordEncryptUtils.h  FlightRecordMD5.cpp  FlightRecordMD5.h
dji-flightrecordengine/source/Utils/featurePoint/: flight_record_feature_point_enum.h
dji-flightrecordengine/source/Utils/keychain/: flight_record_decrypt_keychain.cpp  flight_record_decrypt_keychain.h
dji-flightrecordengine/source/Utils/math/: FlightRecordMaths.cpp  FlightRecordMaths.h
dji-flightrecordengine/source/Utils/string/: flight_record_utf8.cpp  flight_record_utf8.hpp
dji-flightrecordengine/source/Utils/thread/: FlightRecordTimer.cpp  FlightRecordTimer.h  FlightRecordWorker.h  threadsafequeue.h
dji-flightrecordengine/source/model/: FlightRecordCommonModel.h
dji-flightrecordengine/source/model/info/: FlightRecordInfoModel.h
dji-flightrecordengine/source/model/keychain/: FlightRecordKeychainModel.h
dji-flightrecordengine/source/model/protocol/: dji_product_type.h  fr_protocol.h
(+126 files in other folders)
